<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Value Proposition Canvas</string>

    <!-- Home-->
    <string name="home_canvas_empty">Create a new canvas</string>

    <!-- About -->
    <string name="about_title">About</string>
    <string name="about_legal">Questions are taken from Pigneur &amp; Osterwalder book : Value Proposition Canvas\nhttps://strategyzer.com/vpd</string>

    <!-- Canvas (Edit) -->
    <string name="canvas_title_new">New Canvas</string>
    <string name="canvas_title_edit">Edit Canvas</string>
    <string name="canvas_edittext_title">Title</string>
    <string name="canvas_edittext_description">Description</string>

    <!-- Elements -->
    <string name="elements_section_product">Product</string>
    <string name="elements_section_customer">Customer</string>
    <string name="elements_item_1">Products &amp; Services</string>
    <string name="elements_item_2">Gain Creators</string>
    <string name="elements_item_3">Pain Relievers</string>
    <string name="elements_item_4">Customer Job(s)</string>
    <string name="elements_item_5">Gains</string>
    <string name="elements_item_6">Pains</string>
    <string name="elements_delete_confirmation">Do you really want to delete this Value Proposition Canvas ?</string>

    <!-- IdeaList -->
    <string name="idealist_idea_empty">Create a new idea</string>

    <!-- Idea -->
    <string name="idea_title_new">New Post-it</string>
    <string name="idea_title_edit">Edit Post-it</string>
    <string name="idea_delete_confirmation">Do you really want to delete this idea ?</string>
    <string name="idea_question_empty">Create a new question</string>
    <string name="idea_content_hint">Your proposition ?</string>
    <string name="idea_question_title_new">New question</string>
    <string name="idea_question_title_edit">Edit/Remove question</string>
    <string name="idea_question_edit_hint">Your question</string>
    <string name="idea_question_edit_delete">Delete</string>

    <!-- Export -->
    <string name="export_share_title">Share Value Proposition Canvas</string>

    <!-- Action buttons -->
    <string name="action_add">Add</string>
    <string name="action_save">Save</string>
    <string name="action_export">Export</string>
    <string name="action_delete">Delete</string>
    <string name="action_add_question">Add question</string>
    <string name="action_share">Share</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
